Buscador de farmacias

--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
           <a target="_blank" href="Mapabase.html">Ejemplo Mapa Base</a>
         </h6>
       </li>
+      <li>
+        <h6>
+          <a target="_blank" href="Mapabase.html">Ejemplo Buscador de Farmacias</a>
+        </h6>
+      </li>
     </ul>
 
   </div>
