Buscador de Farmacias

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       </li>
       <li>
         <h6>
-          <a target="_blank" href="Mapabase.html">Ejemplo Buscador de Farmacias</a>
+          <a target="_blank" href="Farmacias.html">Ejemplo Buscador de Farmacias</a>
         </h6>
       </li>
     </ul>
