--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </a>
   </nav>
   <div class="container">
-    <h5>Mis Mapas</h5>
+    <h5>Mis Mapas Leaflet</h5>
     <ul>
       <li>
         <h6>
@@ -52,12 +52,21 @@
           <a target="_blank" href="Mapabase.html">Ejemplo Mapa Base</a>
         </h6>
       </li>
+      
       <li>
         <h6>
-          <a target="_blank" href="Farmacias.html">Ejemplo Buscador de Farmacias</a>
+          <a target="_blank" href="Farmacias1.html">Ejemplo Buscador de Farmacias</a>
         </h6>
       </li>
     </ul>
+
+    <h5>Mis Mapas Mapbox</h5>
+    <ul>
+      <li>
+        <h6>
+          <a target="_blank" href="mapbox-basico.html">Ejemplo Bicing</a>
+        </h6>
+      </li>
 
   </div>
 
