--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       
       <li>
         <h6>
-          <a target="_blank" href="Farmacias1.html">Ejemplo Buscador de Farmacias</a>
+          <a target="_blank" href="Farmacias.html">Ejemplo Buscador de Farmacias</a>
         </h6>
       </li>
     </ul>
@@ -68,6 +68,13 @@
         </h6>
       </li>
 
+      <h5>Mis Mapas Mapbox</h5>
+      <ul>
+        <li>
+          <h6>
+            <a target="_blank" href="mapbox-basico.html">Ejemplo Estilo icgc</a>
+          </h6>
+        </li>
   </div>
 
 </body>
