--- a/index.html
+++ b/index.html
@@ -68,11 +68,10 @@
         </h6>
       </li>
 
-      <h5>Mis Mapas Mapbox</h5>
       <ul>
         <li>
           <h6>
-            <a target="_blank" href="mapbox-basico.html">Ejemplo Estilo icgc</a>
+            <a target="_blank" href="mapbox-icgc.html">Ejemplo Estilo icgc</a>
           </h6>
         </li>
   </div>
