--- a/index.html
+++ b/index.html
@@ -67,15 +67,20 @@
           <a target="_blank" href="mapbox-basico.html">Ejemplo Bicing</a>
         </h6>
       </li>
-
-      
+  
       <li>
         <h6>
             <a target="_blank" href="mapbox-icgc.html">Ejemplo Estilo icgc</a>
         </h6>
       </li>
 
-      </ul>
+      <li>
+        <h6>
+            <a target="_blank" href="mapbox-miestilo.html">Ejemplo Mi estilo</a>
+        </h6>
+      </li>
+
+    </ul>
   </div>
 
 </body>
