--- a/index.html
+++ b/index.html
@@ -80,6 +80,12 @@
         </h6>
       </li>
 
+      <li>
+        <h6>
+            <a target="_blank" href="terremotos.html">Ejemplo Buscador de Terremotos</a>
+        </h6>
+      </li>
+
     </ul>
   </div>
 
