--- a/index.html
+++ b/index.html
@@ -86,6 +86,12 @@
         </h6>
       </li>
 
+      <li>
+          <h6>
+              <a target="_blank" href="edificios.html">Ejemplo Edificios Barcelona</a>
+          </h6>
+      </li>
+
     </ul>
   </div>
 
