--- a/index.html
+++ b/index.html
@@ -91,6 +91,16 @@
               <a target="_blank" href="edificios.html">Ejemplo Edificios Barcelona</a>
           </h6>
       </li>
+      <li>
+          <h6>
+              <a target="_blank" href="Accidentes_kepler.html">Ejemplo Accidentes Kepler</a>
+          </h6>
+      </li>
+      <li>
+          <h6>
+              <a target="_blank" href="Accidentes_kepler_edit.html">Ejemplo Accidentes Kepler (editar)</a>
+          </h6>
+      </li>
 
     </ul>
   </div>
