--- a/index.html
+++ b/index.html
@@ -106,6 +106,19 @@
               <a target="_blank" href="iframe.html">Ejemplo iframe accidentes</a>
           </h6>
       </li>
+      <h5>Práctica cementerios Girona</h5>
+      <ul>
+      <li>
+        <h6>
+          <a target="_blank" href="Cementerio_Gir_point.html">Cementerio Girona Sepulturas</a>
+        </h6>
+      </li>
+  
+      <li>
+        <h6>
+            <a target="_blank" href="Cementerio_Gir_polygon.html">Cementerio Girona Sepulturas y estructura</a>
+        </h6>
+      </li>
 
     </ul>
   </div>
