--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           </h6>
       </li>
       <h5>Práctica cementerios Girona</h5>
-      <ul>
+      
       <li>
         <h6>
           <a target="_blank" href="Cementerio_Gir_point.html">Cementerio Girona Sepulturas</a>
@@ -117,6 +117,14 @@
       <li>
         <h6>
             <a target="_blank" href="Cementerio_Gir_polygon.html">Cementerio Girona Sepulturas y estructura</a>
+        </h6>
+      </li>
+
+      <h5>Práctica Final</h5>
+      
+      <li>
+        <h6>
+          <a target="_blank" href="Práctica VisorWeb.html">Práctica Final-Visor Web Parque Fluvial de la Comarca de Pamplona</a>
         </h6>
       </li>
 
